--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ JWT_SECRET ="your secret key";
 JWT_EXPIRES=""
 SMTP_HOST=
 SMTP_PORT=
-SMTP_USER="barimanoj@gmail.com"
+SMTP_USER=""
 SMTP_PASS=""
 
 
